# Carbon-Footprint-Estimator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  calculator.py  llm_client.py  prompts.py  validators.py  visualisations.py
data/: country_averages.json  emission_factors.yaml
pages/: 1_🏠_Household.py  2_✈️_Travel.py  3_🥗_Food.py  4_🛍️_Shopping.py  5_📊_Results.py
tests/: test_calculator.py  test_llm_client.py  test_validators.py
